z-index fix proposed on https://wordpress.org/support/topic/dropdown-theme-needs-higher-z-index
git-svn-id: https://plugins.svn.wordpress.org/skype-online-status/trunk@1168064 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/buttons/white_dropdown/dropdown.css
+++ b/buttons/white_dropdown/dropdown.css
@@ -2,4 +2,4 @@
 #skypeWhiteDrp img{border:none !important;margin:0 !important;padding:0 !important;display:inline}
 #skypeWhiteDrp div#skypeDropdown-white{margin:0 !important;padding:0 !important;clear:both !important;text-indent:0 !important;line-height:0 !important;border:none !important}
 #skypeDropdown-white a{display:block !important;margin:0 !important;padding:0 !important;text-indent:0!important;line-height:0 !important;border:none !important}
-#skypeWhiteDrp > div#skypeDropdown-white{position: absolute;}
+#skypeWhiteDrp > div#skypeDropdown-white{position: absolute;z-index:1}
